--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <title>Bird Gallery</title>
         <link rel="stylesheet" type="text/css" href="css/style.css">
         <link rel="stylesheet" type="text/css" href="css/lightbox.min.css">
-        <script type="text/javascript" src="js/lightbox-plus-jquery.min.js"></script>
+        <script type="text/javascript" src="javascript/lightbox-plus-jquery.min.js"></script>
     </head>
     <body>
         <h1>Bird Gallery</h1>
